--- a/gb/23/2/15/n13930035.md
+++ b/gb/23/2/15/n13930035.md
@@ -28,31 +28,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/7/n10698182.md#1" target="_blank">共产暴政录：中共在苏区杀人如麻</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/8/n9014844.md#1" target="_blank">【细语人生】见证大法的神奇（4）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/10/n10902151.md#1" target="_blank">龙延：中共道路是魔鬼的选择</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/23/n11273948.md#1" target="_blank">青年大法弟子：我们为何会坚持修炼如初</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13924979.md#1">【未解之谜】风水高人揭秘：富贵的秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927307.md#1">【未解之谜】改命用错招 预言大师难逃宿命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920929.md#1">中国人，谁能拯救你？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13923126.md#1">【节气养生】立春怎么顺时“养生”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923582.md#1">【人生之钥】科举落第的读书人 意外当了皇帝的老师</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13929198.md#1">【中国禁闻】中共官媒记者贿赂土耳其灾民 造假新闻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927228.md#1">【百年真相】百年中共与天斗 可怕结局浮现</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13929192.md#1">【探索时分】美再击落3气球 多国也曾出现气球</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927372.md#1">为什么去Costco购物的人群更年轻和富有</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927763.md#1">5年前被马斯克送上太空 特斯拉跑车现状如何</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927761.md#1">习近平为何提拔5名军工背景高官进入政治局</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13929153.md#1">大陆演员李嘉明无戏可拍 回老家摆摊卖炒面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/12/n13928300.md#1">与周星驰“王不见王”？梁朝伟述2人真实交情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13929190.md#1">《满江红》香港票房惨淡 3天仅卖5万多港币</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928773.md#1">林志颖术后首次公开复工 自揭状态“还不错”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/14/n13929227.md#1">中共宣传片《狂飙》爆丑闻 演员曾吸毒被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928807.md#1">意大利奇景：上下颠倒的无花果树</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906326.md#1">痴呆症不可逆？资深医师：1方法可延迟或预防</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926699.md#1">另类观光胜地 地穴能量强大的台北南港公园</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928566.md#1">情人节送花 原来还有这些讲究</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/12/n13928109.md#1">糖都是不好的吗？这些糖对你好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962992.md#1">【车评】橙黄之色 2023 Toyota Tacoma TRD Pro</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963361.md#1">【时事金扫描】川普被起诉牵涉大 解读混乱局势</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/15/n13930035.htm">日落区致命爆炸 引发安全担忧</a></p><hr>
